:sparkles: Implementando os conceitos de manipulação de listas

--- a/modulo-02/for-forin-forof/package.json
+++ b/modulo-02/for-forin-forof/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "modulo-01",
+  "name": "for-forin",
   "version": "1.0.0",
-  "description": "Trabalhando com callbacks",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.21.0"
+  }
 }
