--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -7,7 +7,7 @@
         "type": "node",
         "request": "launch",
         "name": "Launch Program",
-        "program": "${workspaceFolder}/modulo-02/manipulacao-de-lista/4.reduce.js",
+        "program": "${workspaceFolder}/modulo-04/cli/index.js",
         
         "openDebug": "openOnDebugBreak",
         "internalConsoleOptions": "openOnSessionStart"
