--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,5 @@
 image:
   file: .gitpod.Dockerfile
-tasks: 
+tasks:
   - command: npm install -g mocha
+  - command: docker start postgres mongodb adminer mongoclient
