--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,5 +6,13 @@ tasks:
   - name: mocha
     init: npm install -g mocha
   - name: docker-postgres
-    init: echo 'running docker postgres'
-    command: echo 'startinh docker postgres'
+    init: >
+      docker run \
+      --name postgres \
+      -e POSTGRES_USER=admin \
+      -e POSTGRES_PASSWORD=admin \
+      -e POSTGRES_DB=heroes \
+      -p 5432:5432 \
+      -d \
+      postgres
+    command: docker start postgres
