--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,12 +7,12 @@ tasks:
     init: npm install -g mocha
   - name: docker-postgres
     init: >
-      docker run \
-      --name postgres \
-      -e POSTGRES_USER=admin \
-      -e POSTGRES_PASSWORD=admin \
-      -e POSTGRES_DB=heroes \
-      -p 5432:5432 \
-      -d \
+      docker run 
+      --name postgres
+      -e POSTGRES_USER=admin 
+      -e POSTGRES_PASSWORD=admin
+      -e POSTGRES_DB=heroes
+      -p 5432:5432
+      -d
       postgres
     command: docker start postgres
