:wrench: Editando o arquivo gitpod.yml

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -17,8 +17,34 @@ tasks:
       postgres
     command: docker start postgres
   - name: docker-adminer
+    init: >
+      docker run
+      --name adminer
+      -p 8080:8080
+      --link postgres:postgres
+      -d
+      adminer
     command: docker start adminer
   - name: docker-mongodb
+    init: >
+      docker run 
+      --name mongodb 
+      -p 27017:27017 
+      -e MONGO_INITDB_ROOT_USERNAME=admin 
+      -e MONGO_INITDB_ROOT_PASSWORD=senhaadmin 
+      -d 
+      mongo:4
+
+      docker exec -it mongodb 
+      mongo --host localhost -u admin -p senhaadmin --authenticationDatabase admin 
+      --eval "db.getSiblingDB('heroes').createUser({user: 'gabrielsousa', pwd: 'admin', roles: [{role: 'readWrite', db: 'heroes'}]})"
     command: docker start mongodb
   - name: docker-mongoclient
+    init: >
+      docker run
+      --name mongoclient 
+      -p 3000:3000 
+      --link mongodb:mongodb 
+      -d 
+      mongoclient/mongoclient
     command: docker start mongoclient
