:wrench: Editando o arquivo gitpod.yml

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,28 +8,31 @@ tasks:
   - name: docker-postgres
     init: >
       docker run 
-      --name postgres
+      --name postgres 
       -e POSTGRES_USER=admin 
-      -e POSTGRES_PASSWORD=admin
-      -e POSTGRES_DB=heroes
-      -p 5432:5432
-      -d
-      postgres
+      -e POSTGRES_PASSWORD=admin 
+      -e POSTGRES_DB=heroes 
+      -p 5432:5432 
+      -d 
+      postgres &&
+      gp sync-done postgres
     command: docker start postgres
   - name: docker-adminer
     init: >
-      docker run
-      --name adminer
-      -p 8080:8080
-      --link postgres:postgres
-      -d
+      gp sync-await postgres &&
+      docker run 
+      --name adminer 
+      -p 8080:8080 
+      --link postgres:postgres 
+      -d 
       adminer
     command: docker start adminer
   - name: docker-mongodb
     init: |
-      echo 'mongodb > Criando um container para o mongodb'
+      echo '[mongodb]: Criando um container para o mongodb'
       docker run --name mongodb -p 27017:27017 -e MONGO_INITDB_ROOT_USERNAME=admin -e MONGO_INITDB_ROOT_PASSWORD=senhaadmin -d mongo:4
-      echo 'mongodb > Criando usuário para o mongodb'
+      docker start mongodb
+      echo '[mongodb]: Criando usuário para o mongodb'
       docker exec -it mongodb mongo --host localhost -u admin -p senhaadmin --authenticationDatabase admin --eval "db.getSiblingDB('heroes').createUser({user: 'gabrielsousa', pwd: 'admin', roles: [{role: 'readWrite', db: 'heroes'}]})"
     command: docker start mongodb
   - name: docker-mongoclient
