--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -29,10 +29,10 @@ tasks:
     command: docker start adminer
   - name: docker-mongodb
     init: |
-      echo '[mongodb]: Criando um container para o mongodb'
+      echo '>> [mongodb]: Criando um container para o mongodb'
       docker run --name mongodb -p 27017:27017 -e MONGO_INITDB_ROOT_USERNAME=admin -e MONGO_INITDB_ROOT_PASSWORD=senhaadmin -d mongo:4
       docker start mongodb
-      echo '[mongodb]: Criando usuário para o mongodb'
+      echo '>> [mongodb]: Criando usuário para o mongodb'
       docker exec -it mongodb mongo --host localhost -u admin -p senhaadmin --authenticationDatabase admin --eval "db.getSiblingDB('heroes').createUser({user: 'gabrielsousa', pwd: 'admin', roles: [{role: 'readWrite', db: 'heroes'}]})"
     command: docker start mongodb
   - name: docker-mongoclient
