--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -35,7 +35,8 @@ tasks:
       -e MONGO_INITDB_ROOT_USERNAME=admin 
       -e MONGO_INITDB_ROOT_PASSWORD=senhaadmin 
       -d 
-      mongo:4
+      mongo:4 &&
+      gp sync-done mongodb
     command: docker start mongodb
   - name: create-user-mongodb
     init: >
@@ -44,6 +45,7 @@ tasks:
       --eval "db.getSiblingDB('heroes').createUser({user: 'gabrielsousa', pwd: 'admin', roles: [{role: 'readWrite', db: 'heroes'}]})"
   - name: docker-mongoclient
     init: >
+      gp sync-await mongodb &&
       docker run
       --name mongoclient 
       -p 3000:3000 
